--- a/FlutterProjects/shop_project/pubspec.yaml
+++ b/FlutterProjects/shop_project/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^2.1.0
   flutter_swiper: ^1.1.6
   flutter_screenutil: ^0.6.0
+  url_launcher: ^5.1.3
 
 
 dev_dependencies:
